syntax = "proto3";
import "core.v1.proto";
import "google/api/annotations.proto";
option go_package = "./;rpc";

package plant.v1;

service Plant {
    rpc GetPlant(GetPlantRequest) returns (GetPlantResponse) {
        option(google.api.http) = {
            get: "/v1/plant/{plant_id}"
        };
    }
}

message GetPlantRequest {
    string plant_id = 1;
}

message GetPlantResponse {
    core.v1.Plant plant = 1;
}